--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "1  CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "6    6                  Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "[1962 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "[1962 rows x 4 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "[1962 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,6 +698,10 @@
     "df3 = df2[1].str.split(' ', expand=True)\n",
     "df2.columns = ['tag_city', 'state_date']\n",
     "df3.columns = ['Tag State', 'Tag Date']\n",
+    "df3.loc[df3['Tag State'] == 'COAH', 'Tag State'] = 'Coahuila'\n",
+    "df3.loc[df3['Tag State'] == 'MX', 'Tag State'] = 'Nuevo Leon'\n",
+    "df3.loc[df3['Tag State'] == 'ONT', 'Tag State'] = 'Ontario'\n",
+    "df3.loc[df3['Tag State'] == 'QUE', 'Tag State'] = 'Quebec'\n",
     "df3\n"
    ]
   },
@@ -710,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,6 +723,7 @@
     "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '')- to seperate date from city. decided not to use city\n",
     "df4.columns = ['city_date', 'Report State', 'Report Country']\n",
     "df4.loc[df4['Report State'] == 'MICH', 'Report State'] = 'Michoacán'\n",
+    "df4.loc[df4['Report State'] == 'MX', 'Report State'] = 'Coahuila'\n",
     "df5.columns = ['Report Date']"
    ]
   },
@@ -731,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +934,7 @@
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +982,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
