--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "7    7           Miles       REAL        0       None   0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,230 +307,195 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>None</td>\n",
-       "      <td>170</td>\n",
+       "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AR</td>\n",
-       "      <td>33</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>4</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>COAH</td>\n",
+       "      <td>Coahuila</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CT</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Coahuila</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>DC</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>FL</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>GA</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>IA</td>\n",
-       "      <td>573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>IL</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>KS</td>\n",
-       "      <td>776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>KY</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>LA</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>MA</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>MD</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>ME</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>MI</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>MN</td>\n",
-       "      <td>479</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>MO</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>MX</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>NC</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>ND</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>NE</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>NH</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>NJ</td>\n",
-       "      <td>30</td>\n",
+       "      <th>6</th>\n",
+       "      <td>GA</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>NY</td>\n",
-       "      <td>48</td>\n",
+       "      <th>7</th>\n",
+       "      <td>IA</td>\n",
+       "      <td>360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Nuevo Leon</td>\n",
+       "      <th>8</th>\n",
+       "      <td>IL</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>KS</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>KY</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>MA</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>MD</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>ME</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>OH</td>\n",
-       "      <td>91</td>\n",
+       "      <th>15</th>\n",
+       "      <td>MI</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>OK</td>\n",
-       "      <td>185</td>\n",
+       "      <th>16</th>\n",
+       "      <td>MN</td>\n",
+       "      <td>284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>ONT</td>\n",
-       "      <td>58</td>\n",
+       "      <th>17</th>\n",
+       "      <td>MO</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>PA</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>QUE</td>\n",
+       "      <th>18</th>\n",
+       "      <td>MX</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
+       "      <th>19</th>\n",
+       "      <td>NC</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>ND</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>NH</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>NJ</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>PA</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
        "      <td>Quebec</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>30</th>\n",
        "      <td>SC</td>\n",
-       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>SD</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>TN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>VA</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>VT</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>WI</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>WV</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
-       "      <td>SD</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>TN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>VA</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>VT</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>WI</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>WV</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
        "      <td>WY</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -539,63 +504,57 @@
        "</div>"
       ],
       "text/plain": [
-       "     Tag State  Recovered Tags\n",
-       "0         None             170\n",
-       "1           AR              33\n",
-       "2           CO               4\n",
-       "3         COAH               2\n",
-       "4           CT              45\n",
-       "5     Coahuila               5\n",
-       "6           DC               1\n",
-       "7           FL               9\n",
-       "8           GA               3\n",
-       "9           IA             573\n",
-       "10          IL             100\n",
-       "11          IN              54\n",
-       "12          KS             776\n",
-       "13          KY              14\n",
-       "14          LA               3\n",
-       "15          MA              14\n",
-       "16          MD              18\n",
-       "17          ME               7\n",
-       "18      MEXICO               2\n",
-       "19          MI              58\n",
-       "20          MN             479\n",
-       "21          MO              47\n",
-       "22          MS               2\n",
-       "23          MX              21\n",
-       "24          NC              13\n",
-       "25          ND              14\n",
-       "26          NE             119\n",
-       "27          NH               5\n",
-       "28          NJ              30\n",
-       "29          NY              48\n",
-       "30  Nuevo Leon               1\n",
-       "31          OH              91\n",
-       "32          OK             185\n",
-       "33         ONT              58\n",
-       "34          PA              60\n",
-       "35         QUE               7\n",
-       "36      Quebec               1\n",
-       "37          SC               9\n",
-       "38          SD             133\n",
-       "39          TN               2\n",
-       "40          TX             388\n",
-       "41          VA              35\n",
-       "42          VT               7\n",
-       "43          WI              64\n",
-       "44          WV              20\n",
-       "45          WY               3"
+       "   Tag State  Recovered Tags\n",
+       "0       None              95\n",
+       "1         AR               8\n",
+       "2         CT              19\n",
+       "3   Coahuila               2\n",
+       "4         DC               1\n",
+       "5         FL               5\n",
+       "6         GA               2\n",
+       "7         IA             360\n",
+       "8         IL              63\n",
+       "9         IN              32\n",
+       "10        KS             300\n",
+       "11        KY               9\n",
+       "12        MA               3\n",
+       "13        MD               8\n",
+       "14        ME               1\n",
+       "15        MI              29\n",
+       "16        MN             284\n",
+       "17        MO              20\n",
+       "18        MX               7\n",
+       "19        NC               7\n",
+       "20        ND               9\n",
+       "21        NE              63\n",
+       "22        NH               1\n",
+       "23        NJ              13\n",
+       "24        NY              14\n",
+       "25        OH              61\n",
+       "26        OK             115\n",
+       "27   Ontario              33\n",
+       "28        PA              22\n",
+       "29    Quebec               1\n",
+       "30        SC               3\n",
+       "31        SD              78\n",
+       "32        TN               1\n",
+       "33        TX             243\n",
+       "34        VA              17\n",
+       "35        VT               1\n",
+       "36        WI              23\n",
+       "37        WV               6\n",
+       "38        WY               3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state_tally = pd.read_sql('SELECT `Tag State`, COUNT(*) AS \"Recovered Tags\" FROM combine GROUP BY `Tag State` ORDER BY `Tag State`', db)\n",
-    "state_tally"
+    "state_tally = pd.read_sql('SELECT `Tag State`, COUNT(*) AS \"Recovered Tags\" FROM monarchs2001 GROUP BY `Tag State` ORDER BY `Tag State`', db)\n",
+    "#state_tally = pd.read_sql('SELECT `Report State`, COUNT(*) AS \"Recovered Tags\" FROM monarchs2001 GROUP BY `Report State` ORDER BY `Report State`', db)\n",
+    "state_tally\n"
    ]
   },
   {
