--- a/Data/Monarchs_1999_cleanup.ipynb
+++ b/Data/Monarchs_1999_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "1  CREATE TABLE \"monarchs1999\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "8    8            Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "[751 rows x 6 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "[751 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,6 +579,8 @@
    "source": [
     "df2 = df['Tag City, State'].str.split(', ', expand=True)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
+    "df2.loc[df2['Tag State'] == 'ONT', 'Tag State'] = 'Ontario'\n",
+    "df2.loc[df2['Tag State'] == 'QUE', 'Tag State'] = 'Quebec'\n",
     "df2"
    ]
   },
@@ -591,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +711,7 @@
        "[751 rows x 3 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,6 +720,8 @@
     "df3 = df['Report Location'].str.split(', ', expand=True)\n",
     "df3.columns = ['report_city', 'Report State', 'Report Country']\n",
     "df3.loc[df3['Report State'] == 'MICH', 'Report State'] = 'Michoacán'\n",
+    "df3.loc[df3['Report State'] == 'MEXICO', 'Report State'] = 'Mexico'\n",
+    "df3.loc[df3['Report State'] == 'ONT', 'Report State'] = 'Ontario'\n",
     "df3"
    ]
   },
@@ -730,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +913,7 @@
        "[751 rows x 7 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1114,7 @@
        "[751 rows x 7 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1187,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
