--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs2000_index</td>\n",
        "      <td>monarchs2000</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs2000_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -110,7 +110,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs2000_index  monarchs2000         4   \n",
+       "0  index  ix_monarchs2000_index  monarchs2000         3   \n",
        "1  table           monarchs2000  monarchs2000         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -118,7 +118,7 @@
        "1  CREATE TABLE \"monarchs2000\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "8    8            Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "[295 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Darlington</td>\n",
-       "      <td>ONT</td>\n",
+       "      <td>Ontario</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -565,7 +565,7 @@
       "text/plain": [
        "         tag_city Tag State\n",
        "0        Old Lyme        CT\n",
-       "1      Darlington       ONT\n",
+       "1      Darlington   Ontario\n",
        "2    Douglas Lake        MI\n",
        "3    Chincoteague        VA\n",
        "4         Cresson        PA\n",
@@ -579,7 +579,7 @@
        "[295 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,6 +587,9 @@
    "source": [
     "df2 = df['Tag City, State'].str.split(', ', expand=True)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
+    "df2.loc[df2['Tag State'] == 'ONT', 'Tag State'] = 'Ontario'\n",
+    "df2.loc[df2['Tag State'] == 'QUE', 'Tag State'] = 'Quebec'\n",
+    "df2.loc[df2['Tag State'] == 'MEXICO', 'Tag State'] = 'Nuevo Leon'\n",
     "df2\n"
    ]
   },
@@ -599,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +653,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Cerro Pelon</td>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>Mexico</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -705,7 +708,7 @@
        "0     El Rosario    Michoacán             MX\n",
        "1     El Rosario    Michoacán             MX\n",
        "2     El Rosario    Michoacán             MX\n",
-       "3    Cerro Pelon       MEXICO             MX\n",
+       "3    Cerro Pelon       Mexico             MX\n",
        "4     El Rosario    Michoacán             MX\n",
        "..           ...          ...            ...\n",
        "290    Dyersburg           TN           None\n",
@@ -717,7 +720,7 @@
        "[295 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,6 +730,8 @@
     "df3.columns = ['report_city', 'Report State', 'Report Country']\n",
     "#add_usa = df3['Report Country'].fillna('USA') decided to use .loc\n",
     "df3.loc[df3['Report State'] == 'MICH', 'Report State'] = 'Michoacán'\n",
+    "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'Michoacán'\n",
+    "df3.loc[df3['Report State'] == 'MEXICO', 'Report State'] = 'Mexico'\n",
     "df3"
    ]
   },
@@ -739,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +791,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>486KF</td>\n",
-       "      <td>ONT</td>\n",
+       "      <td>Ontario</td>\n",
        "      <td>09/12/99</td>\n",
        "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
@@ -808,7 +813,7 @@
        "      <td>154JR</td>\n",
        "      <td>VA</td>\n",
        "      <td>09/25/99</td>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>Mexico</td>\n",
        "      <td>MX</td>\n",
        "      <td>03/09/01</td>\n",
        "      <td>1969.0</td>\n",
@@ -891,9 +896,9 @@
       "text/plain": [
        "    Tag No. Tag State  Tag Date Report State Report Country Report Date  \\\n",
        "0     613PZ        CT  09/24/00    Michoacán             MX    01/26/01   \n",
-       "1     486KF       ONT  09/12/99    Michoacán             MX    01/07/01   \n",
+       "1     486KF   Ontario  09/12/99    Michoacán             MX    01/07/01   \n",
        "2     067GA        MI  08/20/00    Michoacán             MX    01/07/01   \n",
-       "3     154JR        VA  09/25/99       MEXICO             MX    03/09/01   \n",
+       "3     154JR        VA  09/25/99       Mexico             MX    03/09/01   \n",
        "4     017MS        PA  09/01/99    Michoacán             MX    12/01/00   \n",
        "..      ...       ...       ...          ...            ...         ...   \n",
        "290   611PF        MN       NaN           TN           None         NaN   \n",
@@ -918,7 +923,7 @@
        "[295 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +992,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>486KF</td>\n",
-       "      <td>ONT</td>\n",
+       "      <td>Ontario</td>\n",
        "      <td>09/12/99</td>\n",
        "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
@@ -1009,7 +1014,7 @@
        "      <td>154JR</td>\n",
        "      <td>VA</td>\n",
        "      <td>09/25/99</td>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>Mexico</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/09/01</td>\n",
        "      <td>1969.0</td>\n",
@@ -1092,9 +1097,9 @@
       "text/plain": [
        "    Tag No. Tag State  Tag Date Report State Report Country Report Date  \\\n",
        "0     613PZ        CT  09/24/00    Michoacán         MEXICO    01/26/01   \n",
-       "1     486KF       ONT  09/12/99    Michoacán         MEXICO    01/07/01   \n",
+       "1     486KF   Ontario  09/12/99    Michoacán         MEXICO    01/07/01   \n",
        "2     067GA        MI  08/20/00    Michoacán         MEXICO    01/07/01   \n",
-       "3     154JR        VA  09/25/99       MEXICO         MEXICO    03/09/01   \n",
+       "3     154JR        VA  09/25/99       Mexico         MEXICO    03/09/01   \n",
        "4     017MS        PA  09/01/99    Michoacán         MEXICO    12/01/00   \n",
        "..      ...       ...       ...          ...            ...         ...   \n",
        "290   611PF        MN       NaN           TN            USA         NaN   \n",
@@ -1119,7 +1124,7 @@
        "[295 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1179,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
